Stop headings overlapping with floated images in the docs
This is to stop the same problem that we had on the sponsors page
where the headings ended up wrapping around floated image.

--- a/css/content_extra.css
+++ b/css/content_extra.css
@@ -1,3 +1,4 @@
-div#sponsors_index p {
+div#sponsors_index p,
+div.docs div#content p {
 	overflow:hidden;
 }
